qodem (1.0beta-1) unstable; urgency=low
  * As of May 26, 2015 Qodem is dedicated to the public domain.
  * Numerous bug fixes
  * Switch code repository to github: https://github.com/klamonte/qodem
  * Support for Borland C++ 5.02 compiler
  * Support for Visual C++ 6 compiler
  * Non-blocking connect() for network connection methods
  * Mouse event tracking support for XTERM and LINUX
  * Refactored debug.c into emulation.c
  * Refactored screensaver.c into states.c
  * Refactored status.h into qodem.h
  * Merged Linux, Xterm, and VT100 emulations into a single vt100.c
  * Avatar ansi fallback exposed in qodemrc
  * SSH support switched to cryptlib

 -- Kevin Lamonte <lamonte@users.sourceforge.net>  Wed,  1 Jul 2015 18:50:00 -0500

qodem (1.0alpha-1) unstable; urgency=low

  * --dial command line option
  * mark and space parity limited to 7-bit only
  * Exposed colors as ~/.qodem/colors.cfg
  * PDCurses X11 build via --enable-x11 configure flag
  * ~/.qodem and ~/qodem are now created on first run without asking by default
  * ENQ answerback in qodemrc
  * X11 build spawns x-terminal-emulator for edit file, mail, log view, etc.
  * HTML save format for screen dump and scrollback
  * 'ask' option to prompt everytime for capture, scrollback, and screen dump format
  * Phonebook print 80/132 columns
  * Numeric keypad support for keyboard macros
  * Better DOS-style colors
  * Drop shadows on dialog boxes
  * Default entries in phonebook
  * Fixes for modem dialer
  * Change poll() to timeout() in music play_sequence()
  * Phonebook is centered on screen
  * Debug emulation shows local sent chars in alternate color
  * QuickLearn support
  * Online help system
  * Expose scrollback max lines in qodemrc
  * Internal telnet
  * Internal rlogin
  * Remove rsh
  * Internal ssh
  * Raw socket connection type
  * Current connection address in Alt-I info screen
  * Real double-width double-height chars on xterm
  * Linux emulation now recognizes Xterm OSC strings