@@ -264,7 +264,7 @@ This brings up the file download menu.  Note that CTRL\-PgDn and
 ALT\-PgDn may also work depending on the terminfo for the host
 terminal.
 .TP
-.B Alt\-\\\\ Compose Key
+.B Alt\-\\\\ Alt Code Key
 This brings up a dialog to enter the 3\-digit decimal value (0\-255) for
 an 8\-bit byte or a 4\-digit hexadecimal value (0\-ffff) for a 16\-bit
 Unicode character (L_UTF8 and X_UTF8 only).
